initializing doctor, patient and appointment entities classes

--- a/resources/db.properties
+++ b/resources/db.properties
@@ -1,5 +1,5 @@
 user=root
 password=root
-dburl=jdbc:mysql://localhost:3306/clinicJDBC
+dburl=jdbc:mysql://localhost:3306/clinicjdbc
 useSSL=false
 allowPublicKeyRetrieval=true
